tests/testdata/nonmem/errors/failed_run.mod
$PROBLEM
$INPUT ID TIME AMT WGT APGR DV
$DATA file.csv
$SUBROUTINES ADVAN2 TRANS2
$PK
MAT = THETA(3)*EXP(ETA(1))
CL = THETA(1)*EXP(ETA(2))
VC = THETA(2)*EXP(ETA(3))
KA = 1/MAT
V = VC
$ERROR
Y=F+F*EPS(1)
$THETA  (0,0.01) ; POP_CL
$THETA  (0,0.1) ; POP_VC
$THETA  (0,0.01) ; POP_MAT
$OMEGA BLOCK(2)
0.1    ; IIV_CL
0.01   ; IIV_CL_IIV_VC
0.1    ; IIV_VC
$OMEGA  0.1 ; IIV_MAT
$SIGMA  0.09 ; sigma
$ESTIMATION METHOD=1 INTER
